[gd_scene load_steps=5 format=3 uid="uid://qa7ptswmtr0h"]

[ext_resource type="Script" uid="uid://bdpk851majt8q" path="res://Scripts/Entities/Shop.gd" id="1_k1axo"]
[ext_resource type="PackedScene" uid="uid://mxphegorj4ds" path="res://Entities/Components/GunComponent.tscn" id="2_dvkq7"]
[ext_resource type="Texture2D" uid="uid://5ngtsq2g6xe3" path="res://Art/Entites/GodotWildJamShadow.png" id="3_i56r4"]
[ext_resource type="AudioStream" uid="uid://df64l55o4tlk8" path="res://Audio/Objects/itemBoughtSFX.wav" id="4_35vhm"]

[node name="SellItem" type="Area2D"]
collision_layer = 0
collision_mask = 64
script = ExtResource("1_k1axo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="NewGun" parent="." instance=ExtResource("2_dvkq7")]

[node name="Shadow" type="Sprite2D" parent="."]
texture = ExtResource("3_i56r4")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1

[node name="Bought" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_35vhm")

[connection signal="area_entered" from="." to="." method="_onInteraction"]
[connection signal="area_exited" from="." to="." method="_noInteraction"]
